--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_polyline_points: ^0.2.3
   search_map_place: ^0.3.0
   geocoder: ^0.2.1
+  geolocator: ^5.3.2+2
+  indonesia: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
